# Demo-Command-Center-Agent

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  DEPLOYMENT_CONCURRENCY_FIX.md  Dockerfile  KUBERNETES_DEPLOYMENT.md  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.local.yml  k8s-deployment.yaml  pyproject.toml
.github/workflows/: ci.yml  deploy-dev.yml  deploy-dev.yml.patch  deploy-prod.yml  deploy-prod.yml.patch  deploy-staging.yml  deploy-staging.yml.patch  rollback.yml  security.yml  terraform-plan.yml
contracts/cashfree/: payment-webhook-normalized.v1.schema.json
contracts/events/: agent-event-envelope.v1.schema.json  example.whatsapp-handoff-demo.v1.json  onboarding-completed.v1.schema.json  onboarding-handoff-accepted.v1.schema.json  onboarding-paid-user-requested.v1.schema.json  whatsapp-handoff-demo.v1.schema.json
contracts/google_calendar/: calendar-operation.v1.schema.json
contracts/lead_intake/: example.outbound-delivery-requested.v1.json  legacy-handoff-v0.schema.json  outbound-delivery-requested.v1.schema.json
contracts/meta/: README.md
contracts/onboarding/: handoff-acknowledgement.v1.schema.json
contracts/openapi/: internal-api.v1.yaml
contracts/website/: website-gateway.v1.yaml
docs/adr/: ADR-001-modular-monolith.md  ADR-002-single-whatsapp-ingress.md  ADR-003-database-and-data-ownership.md  ADR-004-inbox-outbox-idempotency.md  ADR-005-payment-ownership.md  ADR-006-google-calendar-identity.md  ADR-007-llm-boundaries.md  ADR-008-state-machine-and-sagas.md  ADR-009-cache-and-locking.md  ADR-010-analytics-and-pii.md  ADR-011-aws-runtime.md  ADR-012-deployment-and-rollback.md
docs/api/: README.md
docs/architecture/: README.md  agent-harmony.md  capability-map.md  container-and-component-model.md  demo-state-machine.md  deployment-topology.md  failure-modes.md  module-dependency-rules.md  payment-saga.md  problem-definition.md  scheduling-saga.md  system-context.md
docs/compliance/: README.md
docs/cost/: aws-cost-controls.md  capacity-model.md  token-and-provider-budgets.md
docs/data/: analytics-data-contract.md  canonical-data-model.md  data-ownership.md  identity-mapping.md  retention-and-deletion.md
docs/discovery/: assumptions-and-unverified-items.md  (+9 more)
migrations/: README.md  env.py
scratch_out/: ecs-environment.json  probe_handoff.py  probe_outbound.py  verify_scope_fix.py
scripts/: README.md  production_check.py  validate_contracts.py  validate_migrations.py  validate_production_hygiene.py  validate_workflows.py
tests/: __init__.py  conftest.py
tools/: README.md
(+463 files in other folders)
